--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -92,6 +92,12 @@
         color: mat-color($recepies-app-warn, 900)
         background-color: mat-color($recepies-app-accent, 100)
 
+
+.parent
+    position: relative
+    width: 100%
+    height: 100%
+
 // MEDIA QUERIES
 
 @media screen and (min-width: 600px)
