--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -55,7 +55,8 @@
             </button>
         </div>
     </mat-toolbar>
-
-    <router-outlet></router-outlet>
+    <div class="parent" [@routeAnimtion]="getDepth(myOutlet)" (@routeAnimtion.start)="startAnimation()">
+        <router-outlet #myOutlet="outlet"></router-outlet>
+    </div>
     <app-footer></app-footer>
 </mat-sidenav-container>
