--- a/src/client/app/app.component.sass
+++ b/src/client/app/app.component.sass
@@ -68,3 +68,8 @@
         max-width: 120px
         text-overflow: ellipsis
         overflow: hidden
+
+.parent
+    position: relative
+    width: 100%
+    height: 100%
