--- a/src/client/app/register/register.component.sass
+++ b/src/client/app/register/register.component.sass
@@ -2,6 +2,7 @@
 @import '../../custom_theme.sass'
 @include angular-material-theme($recepies-app-theme)
 
+
 .register-form
     max-width: 500px
     border: 2px solid rgba(mat-color($recepies-app-primary, 300),.35)
@@ -13,3 +14,32 @@
     padding: 16px 32px
     &__form-field
         width: 100%
+
+.parent
+    position: relative
+    width: 100%
+    height: 100%
+    min-height:
+
+.register
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
+    padding: 0 0 16px 0
+    &__message
+        display: block
+        border-radius: 2px
+        margin: 0 16px 16px 16px
+        padding: 32px 16px
+        border: 2px solid mat-color($recepies-app-primary, 700)
+        color: mat-color($recepies-app-primary, 900)
+        background-color: mat-color($recepies-app-accent, 100)
+
+.hidden
+    opacity: 0
+    height: 0
+    padding: 0
+    margin: 0
+    border: none
+    overflow: hidden
