Corrected spelling mistakes on front and done some improvments

--- a/src/client/app/about/about.component.html
+++ b/src/client/app/about/about.component.html
@@ -1,19 +1,19 @@
 <div class="app-container">
     <main>
         <h1>About the author and the project.</h1>
-        <h2>My name is Pawel and I built this application to practice web developement (especially fron-end) skills.</h2>
+        <h2>My name is Pawel and I built this application to practice web development (especially front-end) skills.</h2>
         <section>
             <h3>Map of the application:</h3>
-            <p>This application was build to give user access to recepies database, allow them to manage their favorites, and create and store their own ones.</p>
+            <p>This application was built to give user access to recipes database, allow them to manage their favorites, and create and store their own ones.</p>
 
-            <p>Default functionality (<u>for not logged in users</u>) allows to view all recepies, display them by categories, and go to each recepie page to check the details. Without logging in there's no more that user can do.</p>
+            <p>Default functionality (<em>for not logged in users</em>) allows to view all recipes, display them by categories, and go to each recepie page to check the details. Without logging in there's no more that user can do.</p>
 
-            <p>After login, user receives more functionality. As a user you can now, add selected recepies to your favorites, and create or edit your own recepies. You can also directly access your favorites/personal recepies and display them all. To check the functionality just <b>login with default credentials</b> provided in 'login' section.</p>
+            <p>After login, the user receives more functionality. As a signed user you can now add selected recipes to your favorites, and create or edit your own recipes. You can also directly access your favorites/personal recipes and display them all. To check the functionality just <b>login with default credentials</b> provided in 'login' section.</p>
 
-            <p>There is also possibility to create your own basic account, and manag recepies from there.</p>
+            <p>There is also possibility to create your own basic account, and manage recipes from there.</p>
         </section>
         <section>
-            <h3>Technologies and tools used in developement process:</h3>
+            <h3>Technologies and tools used in development process:</h3>
 
             <p>Following technologies have been used for that project:</p>
             <h4>Front-end:</h4>
@@ -31,14 +31,14 @@
             <ul>
                 <li>JSON Web Token - stroing token for accessing API</li>
                 <li>Bcrypt - for hashing passwords</li>
-                <li>Nodemon - for running server in developement mode</li>
+                <li>Nodemon - for running server in development mode</li>
                 <li>NPM scripts</li>
                 <li>Dotenv for storing enviroment variables</li>
             </ul>
         </section>
         <section>
             <h3>Application and contact details:</h3>
-            <p>If you want to check the code, please see this <a href="https://github.com/wafel34/recepies-angular-app">link to GitHub repository.</a></p>
+            <p>If you want to check the code, please see this <a href="https://github.com/wafel34/recipes-angular-app">link to GitHub repository.</a></p>
             <p>If you would like to know more about me, please see my <a href="https://www.linkedin.com/in/pawel-marcinkowski/">LinkedIn page</a>, or email me on this address: <a href="mailto:work.pmarcinkowski@gmail.com">work.pmarcinkowski@gmail.coom</a></p>
         </section>
     </main>
