--- a/src/client/app/user-recepies/user-recepies.component.html
+++ b/src/client/app/user-recepies/user-recepies.component.html
@@ -1,6 +1,6 @@
 <div class="app-container">
     <div class="home-header" [ngStyle]="{'background-image': 'url(assets/blueberries-2278921_1280.jpg)'}">
-        <h1 class="home-header__h1">My recepies:</h1>
+        <h1 class="home-header__h1">My recipes:</h1>
     </div>
     <div class="not-found" *ngIf="this.notFound">You don't have any recepies yet.</div>
     <app-recepies-list [recepies]="recepies"></app-recepies-list>
