Changed all spelling mistakes from recepie to recipe. Also fixed status on favorites and user recepies request. When query wasnt found in DB, server will return status 204 instead 404

--- a/src/client/app/about/about.component.html
+++ b/src/client/app/about/about.component.html
@@ -6,7 +6,7 @@
             <h3>Map of the application:</h3>
             <p>This application was built to give user access to recipes database, allow them to manage their favorites, and create and store their own ones.</p>
 
-            <p>Default functionality (<em>for not logged in users</em>) allows to view all recipes, display them by categories, and go to each recepie page to check the details. Without logging in there's no more that user can do.</p>
+            <p>Default functionality (<em>for not logged in users</em>) allows to view all recipes, display them by categories, and go to each recipe page to check the details. Without logging in there's no more that user can do.</p>
 
             <p>After login, the user receives more functionality. As a signed user you can now add selected recipes to your favorites, and create or edit your own recipes. You can also directly access your favorites/personal recipes and display them all. To check the functionality just <b>login with default credentials</b> provided in 'login' section.</p>
 
