--- a/src/client/app/about/about.component.sass
+++ b/src/client/app/about/about.component.sass
@@ -1,16 +1,16 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 a
-    color: mat-color($recepies-app-primary, 700)
+    color: mat-color($recipes-app-primary, 700)
     text-decoration: none
     &:visited
-        color: mat-color($recepies-app-primary, 900)
+        color: mat-color($recipes-app-primary, 900)
     &:focus,
     &:hover
         text-decoration: underline
 
 b, em
-    color: mat-color($recepies-app-warn, 900)
+    color: mat-color($recipes-app-warn, 900)
     font-style: normal
