--- a/src/client/app/home-page/home-page.component.html
+++ b/src/client/app/home-page/home-page.component.html
@@ -2,5 +2,5 @@
     <div class="home-header" [ngStyle]="{'background-image': 'url(assets/italian-cuisine-2378729_1280.jpg)'}">
         <h1 class="home-header__h1">Cooking is easy!</h1>
     </div>
-    <app-recepies-list [recepies]="recepies"></app-recepies-list>
+    <app-recipes-list [recipes]="recipes"></app-recipes-list>
 </div>
