--- a/src/client/app/login/login.component.sass
+++ b/src/client/app/login/login.component.sass
@@ -1,10 +1,10 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 .login-fieldset
         border-radius: 2px
-        border: 2px solid rgba(mat-color($recepies-app-primary, 300),.35)
+        border: 2px solid rgba(mat-color($recipes-app-primary, 300),.35)
         max-width: 500px
         margin: 0 auto
         padding: 16px
