--- a/src/client/app/recipe-page/recipe-page.component.sass
+++ b/src/client/app/recipe-page/recipe-page.component.sass
@@ -1,6 +1,6 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 .hidden
     opacity: 0
@@ -9,7 +9,7 @@
     margin: 0
     overflow: hidden
 
-.recepie-page
+.recipe-page
     display: flex
     flex-direction: column
     align-items: flex-start
@@ -42,8 +42,8 @@
         justify-content: space-around
         align-items: center
         padding: 8px
-        background-color: mat-color($recepies-app-primary, 100)
-        color: mat-color($recepies-app-primary, 900)
+        background-color: mat-color($recipes-app-primary, 100)
+        color: mat-color($recipes-app-primary, 900)
         .details-icons
             display: flex
             flex-direction: column
@@ -61,15 +61,15 @@
         width: 100%
         margin-top: 16px
         padding: 16px 0
-        box-shadow: 0px -5px 6px -4px mat-color($recepies-app-accent, 500)
+        box-shadow: 0px -5px 6px -4px mat-color($recipes-app-accent, 500)
 
         .content__about
             padding: 1px 8px
-            border-left: 5px solid mat-color($recepies-app-accent, 700)
+            border-left: 5px solid mat-color($recipes-app-accent, 700)
             box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.3)
 
 
-.recepie-details-list
+.recipe-details-list
     list-style-type: none
 
     &__item
@@ -88,9 +88,9 @@
         border-radius: 2px
         margin: 16px
         padding: 32px 16px
-        border: 2px solid mat-color($recepies-app-warn, 700)
-        color: mat-color($recepies-app-warn, 900)
-        background-color: mat-color($recepies-app-accent, 100)
+        border: 2px solid mat-color($recipes-app-warn, 700)
+        color: mat-color($recipes-app-warn, 900)
+        background-color: mat-color($recipes-app-accent, 100)
 
 
 .parent
@@ -101,12 +101,12 @@
 // MEDIA QUERIES
 
 @media screen and (min-width: 600px)
-    .recepie-page
+    .recipe-page
         &__image
             height: 275px
 
 @media screen and (min-width: 768px)
-    .recepie-page
+    .recipe-page
         flex-wrap: wrap
         flex-direction: row
         &__image
