--- a/src/client/app/recipes-list/recipes-list.component.sass
+++ b/src/client/app/recipes-list/recipes-list.component.sass
@@ -1,9 +1,9 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 
-// below rule prevents from scrolling to top when tab with recepie type is clicked
+// below rule prevents from scrolling to top when tab with recipe type is clicked
 .tab-group
     min-height: 50vh
 
