--- a/src/client/app/register/register.component.sass
+++ b/src/client/app/register/register.component.sass
@@ -1,11 +1,11 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 
 .register-form
     max-width: 500px
-    border: 2px solid rgba(mat-color($recepies-app-primary, 300),.35)
+    border: 2px solid rgba(mat-color($recipes-app-primary, 300),.35)
     border-radius: 2px
     margin: 0 auto
     display: flex
@@ -32,9 +32,9 @@
         border-radius: 2px
         margin: 0 16px 16px 16px
         padding: 32px 16px
-        border: 2px solid mat-color($recepies-app-primary, 700)
-        color: mat-color($recepies-app-primary, 900)
-        background-color: mat-color($recepies-app-accent, 100)
+        border: 2px solid mat-color($recipes-app-primary, 700)
+        color: mat-color($recipes-app-primary, 900)
+        background-color: mat-color($recipes-app-accent, 100)
 
 .hidden
     opacity: 0
