--- a/src/client/custom_theme.sass
+++ b/src/client/custom_theme.sass
@@ -5,11 +5,11 @@ $custom-typography: mat-typography-config($font-family: 'Sarala, monospace', $he
 
 @include mat-core($custom-typography)
 
-$recepies-app-primary: mat-palette($mat-green)
-$recepies-app-accent:  mat-palette($mat-yellow)
-$recepies-app-warn:    mat-palette($mat-deep-orange)
+$recipes-app-primary: mat-palette($mat-green)
+$recipes-app-accent:  mat-palette($mat-yellow)
+$recipes-app-warn:    mat-palette($mat-deep-orange)
 
-$recepies-app-theme: mat-light-theme($recepies-app-primary, $recepies-app-accent, $recepies-app-warn)
+$recipes-app-theme: mat-light-theme($recipes-app-primary, $recipes-app-accent, $recipes-app-warn)
 
 
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
