--- a/src/client/app/footer/footer.component.sass
+++ b/src/client/app/footer/footer.component.sass
@@ -1,15 +1,15 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 .footer-container
     height: 75px
     margin-top: 16px
-    background-color: mat-color($recepies-app-primary, 900)
+    background-color: mat-color($recipes-app-primary, 900)
     display: flex
     align-items: center
     justify-content: center
-    border-top: 1px solid mat-color($recepies-app-primary)
+    border-top: 1px solid mat-color($recipes-app-primary)
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25)
     &__link
         display: flex
