--- a/src/client/app/recipe-edit-form/recipe-edit-form.component.sass
+++ b/src/client/app/recipe-edit-form/recipe-edit-form.component.sass
@@ -1,6 +1,6 @@
 @import '~@angular/material/theming'
 @import '../../custom_theme.sass'
-@include angular-material-theme($recepies-app-theme)
+@include angular-material-theme($recipes-app-theme)
 
 .header-container
     display: flex
@@ -9,7 +9,7 @@
     &__h1
         margin: 0 0 8px 0
 
-.recepie-form
+.recipe-form
     display: flex
     flex-direction: column
     width: 100%
@@ -37,17 +37,17 @@
             justify-content: flex-start
         &__fieldset
             border-radius: 2px
-            border: 2px solid rgba(mat-color($recepies-app-primary, 300),.35)
+            border: 2px solid rgba(mat-color($recipes-app-primary, 300),.35)
 
 
 
 @media screen and (min-width: 500px)
-    .recepie-form
+    .recipe-form
         width: 80%
         margin: 0 auto
 
 @media screen and (min-width: 768px)
-    .recepie-form
+    .recipe-form
         width: 100%
         display: flex
         flex-direction: row
