--- a/src/client/app/user-recipes/user-recipes.component.html
+++ b/src/client/app/user-recipes/user-recipes.component.html
@@ -2,6 +2,6 @@
     <div class="home-header" [ngStyle]="{'background-image': 'url(assets/blueberries-2278921_1280.jpg)'}">
         <h1 class="home-header__h1">My recipes:</h1>
     </div>
-    <div class="not-found" *ngIf="this.notFound">You don't have any recepies yet.</div>
-    <app-recepies-list [recepies]="recepies"></app-recepies-list>
+    <div class="not-found" *ngIf="this.notFound">You don't have any recipes yet.</div>
+    <app-recipes-list [recipes]="recipes"></app-recipes-list>
 </div>
